Successfully Loaded Static Resources.

--- a/Onlineshopping/pom.xml
+++ b/Onlineshopping/pom.xml
@@ -38,6 +38,13 @@
 			<version>${spring.version}</version>
 		</dependency>
 
+		<!--jstl -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
